--- a/训练营/0924js01/demo2.html
+++ b/训练营/0924js01/demo2.html
@@ -34,7 +34,7 @@
 	console.log(parseInt(3.14));//取整
 	console.log(parseFloat("3.14")+1);
 	console.log(parseInt("abc"));
-	console.log(typeof(n));
+	console.log(typeof(n));//返回数据类型
 	console.log(isNaN(n));//判断传入参数是否为NaN
 	
 	//4.运算符
